# kagi

./: .gitmodules  Cargo.toml  README.md
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs  playback.rs  player.rs  theme.rs
crates/backend/src/gstreamer/: mod.rs
crates/backends/gstreamer/: Cargo.toml
crates/backends/gstreamer/src/: lib.rs
crates/components/: Cargo.toml
crates/components/src/: button.rs  icon.rs  input.rs  lib.rs  now_playing.rs  slider.rs  theme.rs  titlebar.rs
crates/kagi/: Cargo.toml
crates/kagi/src/: main.rs
crates/reyvr/: Cargo.toml
crates/reyvr/src/: main.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  assets.rs  control_bar.rs  keybinds.rs  layout.rs  lib.rs  main_view.rs  now_playing.rs  player_context.rs  queue_list.rs  res_handler.rs  sidebar.rs  theme.rs  titlebar.rs
oldsrc/: main.rs
oldsrc/components/: slider.rs
src/: app.rs  main.rs
src/audio/: engine.rs
src/components/: button.rs  slider.rs
src/controller/: metadata.rs  player.rs
src/ui/: assets.rs  icons.rs  mod.rs  theme.rs  titlebar.rs  wiremann.rs
src/ui/components/: controlbar.rs  mod.rs  navbar.rs  titlebar.rs
