[workspace]
members = ["crates/reyvr", "crates/backend", "crates/ui", "crates/components"]
resolver = "2"
default-members = ["crates/reyvr"]

[workspace.dependencies]
anyhow = "1.0.95"
gpui = { git = "https://github.com/someone13574/zed", branch = "text-center" }
gstreamer = "0.23.4"
async-trait = "0.1.85"
smol = "2.0.2"
ring-channel = "0.12.0"
image = "0.25.5"
smallvec = "1.13.2"
