[workspace]
members = ["crates/kagi", "crates/backend", "crates/ui", "crates/components"]
resolver = "2"
default-members = ["crates/kagi"]

[workspace.dependencies]
anyhow = "1.0.95"
gpui = { git = "https://github.com/zed-industries/zed" }
gstreamer = "0.23.4"
async-trait = "0.1.85"
smol = "2.0.2"
ring-channel = "0.12.0"
image = "0.25.5"
smallvec = "1.13.2"
rfd = "0.15.2"
serde = "1.0.217"
directories = "5.0"
toml = "0.8.20"
bincode = { git = "https://github.com/bincode-org/bincode", branch = "trunk", features = [
    "serde",
] }
rand = "0.9.0"
