[workspace]
members = ["crates/kagi", "crates/backend", "crates/ui", "crates/components"]
resolver = "2"
default-members = ["crates/kagi"]

[workspace.dependencies]
anyhow = "1.0.95"
gpui = { git = "https://github.com/someone13574/zed/", branch = "animate-when" }
gstreamer = "0.23.4"
async-trait = "0.1.85"
smol = "2.0.2"
ring-channel = "0.12.0"
image = "0.25.5"
smallvec = "1.13.2"
rfd = "0.15.2"
serde = "1.0.217"
directories = "5.0"
toml = "0.8.20"
bincode = { git = "https://github.com/bincode-org/bincode", branch = "trunk", features = [
    "serde",
] }
rand = "0.9.0"
nucleo = "0.5.0"
notify = "8.0.0"
rust-embed = "8.5.0"
souvlaki = "0.8.1"
raw-window-handle = "0.5.2"
