[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
ring-channel.workspace = true
smol.workspace = true
gstreamer.workspace = true
gstreamer-pbutils = "0.23.4"
gpui.workspace = true
smallvec.workspace = true
image.workspace = true
rfd.workspace = true
serde.workspace = true
directories.workspace = true
toml.workspace = true
bincode.workspace = true
