[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui.workspace = true
anyhow.workspace = true
components = { path = "../components" }
backend = { path = "../backend" }
gstreamer.workspace = true
rfd.workspace = true
image.workspace = true
smallvec.workspace = true
nucleo.workspace = true
simsearch.workspace = true
strsim.workspace = true
